syntax = "proto3";

option go_package = "github.com/ossipesonen/providers-app";

package proto;

import "google/protobuf/empty.proto";

service ProvidersAppService {
    // Providers
    rpc ListProviders (google.protobuf.Empty) returns (ListOfProviders) {}
    rpc ReadProvider (ReadProviderRequest) returns (Provider) {}
    rpc CreateProvider (CreateProviderRequest) returns (ProviderId) {}

    // Users
    rpc GetToken(LoginRequest) returns (Tokens) {}
    rpc GetUserInfo(google.protobuf.Empty) returns (UserInfo) {}
    rpc RegisterUser(RegistrationRequest) returns (google.protobuf.Empty) {}
    rpc RefreshToken(RefreshTokenRequest) returns (Tokens) {}
    rpc RevokeRefreshToken(RefreshTokenRequest) returns (google.protobuf.Empty) {}
    rpc RevokeAllRefreshTokens(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

// Provider messages
message ReadProviderRequest {
    int32 id = 1;
}

message Provider {
    int32 id = 1;
    string name = 2;
    string city = 3;
    string region = 4;
    string line_of_business = 5;
}

message CreateProviderRequest {
    string name = 2;
    string city = 3;
    string region = 4;
    string line_of_business = 5;
}

message ProviderId {
    int32 id = 1;
}

message ListOfProviders {
    repeated Provider providers = 1;
}

// User messages
message RefreshTokenRequest {
    string refresh_token = 1;
}

message RegistrationRequest {
    string email = 1;
    string password = 2;
    string username = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message Tokens {
    string access_token = 1;
    int32 exp = 2;
    string token_type = 3;        
    string refresh_token = 4;
    optional string scope = 5;
}

message UserInfo {
    int32 id = 1;
    string email = 2;
    repeated Provider providerAccounts = 3;
}